# lenz-io-python

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  openapi.json  pyproject.toml
.github/ISSUE_TEMPLATE/: bug.md  feature.md  question.md
.github/workflows/: ci.yml  release.yml
examples/: library_quiz.py
examples/core/: async_poll.py  fastapi_webhook.py  quickstart.py  verify_batch.py  verify_llm_output.py  verify_spanish.py
scripts/hooks/: pre-commit
src/lenz_io/: __init__.py  client.py  errors.py  models.py  webhooks.py
src/lenz_io/cli/: __init__.py  _run.py  app.py  client.py  commands.py  config.py  context.py  errors.py  render.py  verify.py
tests/: conftest.py  test_cli.py  test_client.py  test_contract.py  test_errors.py  test_language.py  test_smoke_cli.py  test_smoke_staging.py  test_webhooks.py
tests/fixtures/contract/: assess_multiclaim.json  assess_single_claim.json  extract_response.json  usage.json  verifications_detail.json  verify_status_completed.json  verify_status_failed.json  webhook_payload_completed.json
