[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "lenz-io"
dynamic = ["version"]
description = "Official Python SDK for the Lenz Claim Verification API for AI Product Teams"
readme = "README.md"
license = "MIT"
authors = [{ name = "Lenz", email = "support@lenz.io" }]
requires-python = ">=3.9"
keywords = ["lenz", "fact-check", "llm", "hallucination", "verification", "api", "sdk", "ai"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = [
  # Upper bound on httpx because the unreleased 1.0.dev series drops
  # `httpx.Timeout` (and other top-level re-exports) — pip with `--pre`
  # would otherwise pick it up and break runtime construction.
  "httpx>=0.27,<1",
  "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "responses>=0.25",
  "respx>=0.21",
  "ruff>=0.6",
  "mypy>=1.10",
]

[project.urls]
Homepage = "https://lenz.io"
Documentation = "https://lenz.io/api/v1/docs/"
Repository = "https://github.com/lenzhq/lenz-io-python"
Issues = "https://github.com/lenzhq/lenz-io-python/issues"
Changelog = "https://github.com/lenzhq/lenz-io-python/blob/main/CHANGELOG.md"

[tool.hatch.version]
# Source the version from the git tag at build time so we never have to
# hand-bump pyproject.toml. The release workflow tags `v1.2.3` → wheel
# version `1.2.3`; `v1.2.3rc4` → `1.2.3rc4`. Local dev builds (no tag)
# pick up a "0.0.0+local" placeholder.
source = "vcs"
fallback-version = "0.0.0"

[tool.hatch.build.hooks.vcs]
# Optional: write the resolved version to a generated _version.py so
# `lenz_io.__version__` can read it without re-parsing pyproject metadata.
version-file = "src/lenz_io/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/lenz_io"]

[tool.hatch.build.targets.sdist]
include = ["src/lenz_io/**", "README.md", "LICENSE", "CHANGELOG.md"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]

[tool.mypy]
python_version = "3.9"
strict = true
ignore_missing_imports = true
files = ["src/lenz_io"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q --strict-markers"
markers = [
  "smoke: opt-in tests that hit a real Lenz staging environment (require LENZ_E2E_KEY)",
]
