[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "lenz-io"
dynamic = ["version"]
description = "Official Python SDK for the Lenz Fact Checking API for AI Product Teams"
readme = "README.md"
license = "MIT"
authors = [{ name = "Lenz", email = "support@lenz.io" }]
requires-python = ">=3.9"
keywords = ["lenz", "fact-check", "llm", "hallucination", "verification", "api", "sdk", "ai"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = [
  # Upper bound on httpx because the unreleased 1.0.dev series drops
  # `httpx.Timeout` (and other top-level re-exports) — pip with `--pre`
  # would otherwise pick it up and break runtime construction.
  "httpx>=0.27,<1",
  "pydantic>=2.0",
  # PEP 604 `int | None` unions are Python 3.10+ at runtime, but
  # `from __future__ import annotations` only defers evaluation —
  # Pydantic v2 still resolves them eagerly for schema generation.
  # The backport patches 3.9 to parse the new syntax. No-op on 3.10+.
  "eval_type_backport>=0.2; python_version < '3.10'",
]

[project.optional-dependencies]
# The `lenz` CLI ships inside this package; its deps live here so a plain
# `pip install lenz-io` stays lean (the SDK is the revenue-path import).
cli = [
  "typer>=0.12",
  "rich>=13.0",
  "platformdirs>=4.0",
]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "responses>=0.25",
  "respx>=0.21",
  "ruff>=0.6",
  "mypy>=1.10",
  # CLI deps so the CLI test suite (Typer CliRunner) runs under `dev`.
  "typer>=0.12",
  "rich>=13.0",
  "platformdirs>=4.0",
]

[project.scripts]
# Entry point is the guarded `main()` (not the Typer `app`) so a plain
# `pip install lenz-io` user who runs `lenz` gets a friendly install nudge
# instead of an ImportError traceback.
lenz = "lenz_io.cli:main"

[project.urls]
Homepage = "https://lenz.io"
Documentation = "https://lenz.io/api/v1/docs/"
Repository = "https://github.com/lenzhq/lenz-io-python"
Issues = "https://github.com/lenzhq/lenz-io-python/issues"
Changelog = "https://github.com/lenzhq/lenz-io-python/blob/main/CHANGELOG.md"

[tool.hatch.version]
# Source the version from the git tag at build time so we never have to
# hand-bump pyproject.toml. The release workflow tags `v1.2.3` → wheel
# version `1.2.3`; `v1.2.3rc4` → `1.2.3rc4`. Local dev builds (no tag)
# pick up a "0.0.0+local" placeholder.
source = "vcs"
fallback-version = "0.0.0"

[tool.hatch.build.hooks.vcs]
# Optional: write the resolved version to a generated _version.py so
# `lenz_io.__version__` can read it without re-parsing pyproject metadata.
version-file = "src/lenz_io/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/lenz_io"]

[tool.hatch.build.targets.sdist]
include = ["src/lenz_io/**", "README.md", "LICENSE", "CHANGELOG.md"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]

[tool.mypy]
# mypy uses 3.10 as the typing baseline (built-in generics, PEP 604).
# Runtime still supports 3.9 (`from __future__ import annotations` in
# every module) and CI tests on 3.9-3.12 — see ci.yml matrix.
python_version = "3.10"
strict = true
ignore_missing_imports = true
files = ["src/lenz_io"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q --strict-markers"
markers = [
  "smoke: opt-in tests that hit a real Lenz staging environment (require LENZ_E2E_KEY)",
]
